# brainfuck-interpreter

./: LICENSE  Note.txt  README.md  hello.bf  pyproject.toml
brainfuck/: __main__.py  interpreter.py  preprocessor.py
brainfuck_interpreter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
